Vertical background stripes. Looks more bland, but doesn't cause as much visible jittering when DOM elements are added. See issue #73.

--- a/inc/scramble.css
+++ b/inc/scramble.css
@@ -7,10 +7,10 @@ body {
   font-family: Helvetica, Tahoma, Arial;
 
   background-color: #EEE;
-  background-image: -webkit-repeating-linear-gradient(-45deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
-  background-image: -moz-repeating-linear-gradient(-45deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
-  background-image: -o-repeating-linear-gradient(-45deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
-  background-image: repeating-linear-gradient(-45deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
+  background-image: -webkit-repeating-linear-gradient(0deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
+  background-image: -moz-repeating-linear-gradient(0deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
+  background-image: -o-repeating-linear-gradient(0deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
+  background-image: repeating-linear-gradient(0deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
   max-width: 800px;
 }
 
@@ -143,7 +143,6 @@ li {
   padding: 1em;
   margin: 1em;
   font-family: Helvetica;
-  border: 1px solid #00c0c0;
   border-radius: 1em;
   background: #00c0c0;
 }
